# kddeployqt

./: CMakeLists.txt  LICENSE  README.md  kddeployqt.py
